Revision history for Parser-Combinators

{{$NEXT}}

0.02  2013-08-26 15:35:07 BST
        - Better documentation, renamed some combinators to be the same as in Parsec, fixed bindP/returnP, added more tests