@@ -57,6 +57,6 @@
          "web" : "https://github.com/wimvanderbauwhede/Perl-Parser-Combinators"
       }
    },
-   "version" : "0.02"
+   "version" : "0.03"
 }
 
